--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -846,7 +846,7 @@ DOWNLOAD_POPUP_MENU_EDIT_LOCATION_TIP=Renomme ou déplace le fichier chargé.
 #### DOWNLOAD_POPUP_MENU_CLEAR=Clear All Inactive Downloads
 DOWNLOAD_POPUP_MENU_CLEAR=Effacer tous les chargements inactifs
 #### DOWNLOAD_EXPLORE_BUTTON_TIP=Open Folder Containing the File
-#? DOWNLOAD_EXPLORE_BUTTON_TIP=
+DOWNLOAD_EXPLORE_BUTTON_TIP=Ouvre le dossier contenant le fichier
 
 #### LIBRARY_LAUNCH_BUTTON_LABEL=Launch
 LIBRARY_LAUNCH_BUTTON_LABEL=Lancer
@@ -873,9 +873,9 @@ LIBRARY_ANNOTATE_BUTTON_LABEL=Annoter...
 #### LIBRARY_ANNOTATE_BUTTON_TIP=Add Description to Selected File
 LIBRARY_ANNOTATE_BUTTON_TIP=Annote le fichier sélectionné.
 #### LIBRARY_PUBLISH_BUTTON_LABEL=Publish...
-#? LIBRARY_PUBLISH_BUTTON_LABEL=
+LIBRARY_PUBLISH_BUTTON_LABEL=Publier...
 #### LIBRARY_PUBLISH_BUTTON_TIP=Publish under Creative Commons License
-#? LIBRARY_PUBLISH_BUTTON_TIP=
+LIBRARY_PUBLISH_BUTTON_TIP=Publier suivant une licence Creative Commons
 #### LIBRARY_RESUME_BUTTON_LABEL=Resume
 LIBRARY_RESUME_BUTTON_LABEL=Reprendre
 #### LIBRARY_RESUME_BUTTON_TIP=Continue Downloading Selected Incomplete File
@@ -1229,16 +1229,15 @@ DOWNLOAD_PRIORITY_PRIORITIZE=File d'attente
 #### DOWNLOAD_SHOW_FIRST_DOWNLOAD_WARNING=LimeWire is unable to find a license for this file. Download anyway?\n\nPlease note: LimeWire cannot monitor or control the content of the Gnutella network. Please respect your local copyright laws.
 DOWNLOAD_SHOW_FIRST_DOWNLOAD_WARNING=LimeWire ne peut trouver une licence pour ce fichier. Le charger quand même\u00a0?\n\nVeuillez noter\u00a0: LimeWire ne peut surveiller ou contrôler le contenu accessible sur le réseau Gnutella. Veuillez respecter votre législation concernant la propriété intellectuelle.
 #### DOWNLOAD_SEARCH_MENU=Search...
-#? DOWNLOAD_SEARCH_MENU=
+DOWNLOAD_SEARCH_MENU=Rechercher...
 #### DOWNLOAD_SEARCH_FILENAME_LABEL=Files with this name
-#? DOWNLOAD_SEARCH_FILENAME_LABEL=
+DOWNLOAD_SEARCH_FILENAME_LABEL=Fichiers ayant ce nom
 #### DOWNLOAD_SEARCH_FILENAME_TIP=Searches for files with the same file name.
-#? DOWNLOAD_SEARCH_FILENAME_TIP=
+DOWNLOAD_SEARCH_FILENAME_TIP=Recherche des fichiers ayant le même nom.
 #### DOWNLOAD_SERACH_ORGINAL_LABEL=Orginal query
-#? DOWNLOAD_SERACH_ORGINAL_LABEL=
+DOWNLOAD_SERACH_ORGINAL_LABEL=Requête originale
 #### DOWNLOAD_SERACH_ORGINAL_TIP=Performs the same search as the one which found this file previously.
-#? DOWNLOAD_SERACH_ORGINAL_TIP=
-
+DOWNLOAD_SERACH_ORGINAL_TIP=Effectue la même recherche que celle ayant trouvé précédemment ce fichier.
 
 ###################################################################
 # Key/value pairs for UploadView
@@ -1712,41 +1711,41 @@ XML_videos__video__bitrate__=Débit binaire
 XML_videos__video__action__=Action
 
 #### XML_images__image=Image
-#? XML_images__image=
+XML_images__image=Image
 #### XML_images__image__title__=Title
-#? XML_images__image__title__=
+XML_images__image__title__=Titre
 #### XML_images__image__description__=Description
-#? XML_images__image__description__=
+XML_images__image__description__=Description
 #### XML_images__image__artist__=Artist
-#? XML_images__image__artist__=
+XML_images__image__artist__=Artiste
 #### XML_images__image__license__=License
-#? XML_images__image__license__=
+XML_images__image__license__=Licence
 #### XML_images__image__licensetype__=License Type
-#? XML_images__image__licensetype__=
+XML_images__image__licensetype__=Type de licence
 
 #### XML_documents__document=Document
-#? XML_documents__document=
+XML_documents__document=Document
 #### XML_documents__document__title__=Title
-#? XML_documents__document__title__=
+XML_documents__document__title__=Titre
 #### XML_documents__document__topic__=Topic
-#? XML_documents__document__topic__=
+XML_documents__document__topic__=Sujet
 #### XML_documents__document__author__=Author
-#? XML_documents__document__author__=
+XML_documents__document__author__=Auteur
 #### XML_documents__document__license__=License
-#? XML_documents__document__license__=
+XML_documents__document__license__=Licence
 #### XML_documents__document__licensetype__=License Type
-#? XML_documents__document__licensetype__=
+XML_documents__document__licensetype__=Type de licence
 
 #### XML_applications__application=Application
-#? XML_applications__application=
+XML_applications__application=Application
 #### XML_applications__application__name__=Name
-#? XML_applications__application__name__=
+XML_applications__application__name__=Nom
 #### XML_applications__application__publisher__=Publisher
-#? XML_applications__application__publisher__=
+XML_applications__application__publisher__=Éditeur
 #### XML_applications__application__licensetype__=License Type
-#? XML_applications__application__licensetype__=
+XML_applications__application__licensetype__=Type de licence
 #### XML_applications__application__license__=License
-#? XML_applications__application__license__=
+XML_applications__application__license__=Licence
 
 #MetaEditorFrame
 #### META_EDITOR_ANNOTATING_FILE=Annotating file
@@ -1829,43 +1828,41 @@ META_EDITOR_STARS_LABEL=Étoiles\u00a0:
 #### META_EDITOR_LICENSE_LABEL=License:
 META_EDITOR_LICENSE_LABEL=Licence\u00a0:
 #### META_EDITOR_LICENSETYPE_LABEL=License Type:
-#? META_EDITOR_LICENSETYPE_LABEL=
+META_EDITOR_LICENSETYPE_LABEL=Type de licence\u00a0:
 #### META_EDITOR_VIDEO_LABEL=Video
-#? META_EDITOR_VIDEO_LABEL=
+META_EDITOR_VIDEO_LABEL=Vidéo
 #### META_EDITOR_RATING_LABEL=Rating:
-#? META_EDITOR_RATING_LABEL=
+META_EDITOR_RATING_LABEL=Classification\u00a0:
 #### META_EDITOR_LENGTH_LABEL=Length:
-#? META_EDITOR_LENGTH_LABEL=
+META_EDITOR_LENGTH_LABEL=Longueur\u00a0:
 #### META_EDITOR_HEIGHT_LABEL=Height:
-#? META_EDITOR_HEIGHT_LABEL=
+META_EDITOR_HEIGHT_LABEL=Largeur\u00a0:
 #### META_EDITOR_DIRECTOR_LABEL=Director:
-#? META_EDITOR_DIRECTOR_LABEL=
+META_EDITOR_DIRECTOR_LABEL=Réalisateur\u00a0:
 #### META_EDITOR_STUDIO_LABEL=Studio:
-#? META_EDITOR_STUDIO_LABEL=
+META_EDITOR_STUDIO_LABEL=Studio\u00a0:
 #### META_EDITOR_PRODUCER_LABEL=Producer: (Please separate with comma)
-#? META_EDITOR_PRODUCER_LABEL=
+META_EDITOR_PRODUCER_LABEL=Producteur(s)\u00a0: (séparés par des virgules)
 #### META_EDITOR_SUBTITLES_LABEL=Subtitles: (Please separate with comma)
-#? META_EDITOR_SUBTITLES_LABEL=
+META_EDITOR_SUBTITLES_LABEL=Sous-titres\u00a0: (séparés par des virgules)
 #### META_EDITOR_DOCUMENT_LABEL=Document
-#? META_EDITOR_DOCUMENT_LABEL=
+META_EDITOR_DOCUMENT_LABEL=Document
 #### META_EDITOR_APPLICATION_LABEL=Application
-#? META_EDITOR_APPLICATION_LABEL=
+META_EDITOR_APPLICATION_LABEL=Application
 #### META_EDITOR_IMAGE_LABEL=Image
-#? META_EDITOR_IMAGE_LABEL=
+META_EDITOR_IMAGE_LABEL=Image
 #### META_EDITOR_TOPIC_LABEL=Topic:
-#? META_EDITOR_TOPIC_LABEL=
+META_EDITOR_TOPIC_LABEL=Sujet\u00a0:
 #### META_EDITOR_AUTHOR_LABEL=Author:
-#? META_EDITOR_AUTHOR_LABEL=
+META_EDITOR_AUTHOR_LABEL=Auteur\u00a0:
 #### META_EDITOR_NAME_LABEL=Name:
-#? META_EDITOR_NAME_LABEL=
+META_EDITOR_NAME_LABEL=Nom\u00a0:
 #### META_EDITOR_PUBLISHER_LABEL=Publisher:
-#? META_EDITOR_PUBLISHER_LABEL=
+META_EDITOR_PUBLISHER_LABEL=Éditeur\u00a0:
 #### META_EDITOR_DESCRIPTION_LABEL=Description:
-#? META_EDITOR_DESCRIPTION_LABEL=
+META_EDITOR_DESCRIPTION_LABEL=Description\u00a0:
 #### META_EDITOR_PLATFORM_LABEL=Platform:
-#? META_EDITOR_PLATFORM_LABEL=
-
-
+META_EDITOR_PLATFORM_LABEL=Plate-forme\u00a0:
 #### META_EDITOR_SIZE_LABEL=Size:
 META_EDITOR_SIZE_LABEL=Taille\u00a0:
 #### META_EDITOR_DATE_MODIFIED_LABEL=Date Modified:
@@ -1880,55 +1877,55 @@ META_EDITOR_MP4_KIND_LABEL=MPEG-4 Audio
 META_EDITOR_OGG_KIND_LABEL=Ogg Vorbis
 
 #### CC_PUBLISHER_TITLE=Publish License
-#? CC_PUBLISHER_TITLE=
-#### CC_PUBLISHER_INTRO=This tool helps you publish audio under a Creative Commons license. 
-#? CC_PUBLISHER_INTRO=
+CC_PUBLISHER_TITLE=Publication de Licence
+#### CC_PUBLISHER_INTRO=This tool helps you publish audio under a Creative Commons license.
+CC_PUBLISHER_INTRO=Cet assistant vous aide à publier un contenu audio sous une licence Creative Commons.
 #### CC_PUBLISHER_CC_INTRO_URL_LABEL=How does it work?
-#? CC_PUBLISHER_CC_INTRO_URL_LABEL=
+CC_PUBLISHER_CC_INTRO_URL_LABEL=Comment ça marche\u00a0?
 #### CC_PUBLISHER_WARNING_CREATE=I understand that to publish a file, I must either own its copyrights or be authorized to publish them under a Creative Commons license.
-#? CC_PUBLISHER_WARNING_CREATE=
+CC_PUBLISHER_WARNING_CREATE=Je comprend que pour publier un fichier, je dois soit en posséder les droits, soit être autorisé à le publier suivant une licence Creative Commons.
 #### CC_PUBLISHER_WARNING_MODIFY=This file already has a license. If you want to modify it, click the checkbox to attest that you either own its copyrights or are authorized to publish them under a Creative Commons license.
-#? CC_PUBLISHER_WARNING_MODIFY=
+CC_PUBLISHER_WARNING_MODIFY=Ce fichier possède déjà une licence. Si vous voulez la modifier, cliquez la case à cocher pour attester que, soit vous en possédez les droits, soit vous êtes autorisé à le publier suivant une licence Creative Commons.
 #### CC_PUBLISHER_REMOVE_LICENSE_LABEL=Click here to permanently remove the license from this file
-#? CC_PUBLISHER_REMOVE_LICENSE_LABEL=
+CC_PUBLISHER_REMOVE_LICENSE_LABEL=Cliquez ici pour ôter de façon permanente le licence de ce fichier.
 #### CC_PUBLISHER_COPYRIGHT_HOLDER_LABEL=Copyright Holder:
-#? CC_PUBLISHER_COPYRIGHT_HOLDER_LABEL=
+CC_PUBLISHER_COPYRIGHT_HOLDER_LABEL=Titulaire des droits\u00a0:
 #### CC_PUBLISHER_COPYRIGHT_YEAR_LABEL=Copyright Year:
-#? CC_PUBLISHER_COPYRIGHT_YEAR_LABEL=
+CC_PUBLISHER_COPYRIGHT_YEAR_LABEL=Année du copyright\u00a0:
 #### CC_PUBLISHER_WORK_TITLE_LABEL=Title of Work:
-#? CC_PUBLISHER_WORK_TITLE_LABEL=
+CC_PUBLISHER_WORK_TITLE_LABEL=Titre du travail\u00a0:
 #### CC_PUBLISHER_DESCRIPTION_LABEL=Description:
-#? CC_PUBLISHER_DESCRIPTION_LABEL=
+CC_PUBLISHER_DESCRIPTION_LABEL=Description\u00a0:
 #### CC_PUBLISHER_LICENSE_LABEL=License Type:
-#? CC_PUBLISHER_LICENSE_LABEL=
+CC_PUBLISHER_LICENSE_LABEL=Type de licence\u00a0:
 #### CC_PUBLISHER_LICENSE_CC=Creative Commons
-#? CC_PUBLISHER_LICENSE_CC=
+CC_PUBLISHER_LICENSE_CC=Creative Commons
 #### CC_PUBLISHER_LICENSE_PUBLIC=Public Domain
-#? CC_PUBLISHER_LICENSE_PUBLIC=
+CC_PUBLISHER_LICENSE_PUBLIC=Domaine public
 #### CC_PUBLISHER_LICENSE_ALLOWCOM_LABEL=Allow commercial use of your work?
-#? CC_PUBLISHER_LICENSE_ALLOWCOM_LABEL=
+CC_PUBLISHER_LICENSE_ALLOWCOM_LABEL=Autorisez-vous l'utilisation commerciale de votre travail\u00a0?
 #### CC_PUBLISHER_LICENSE_ALLOWMOD_LABEL=Allow modification of your work?
-#? CC_PUBLISHER_LICENSE_ALLOWMOD_LABEL=
+CC_PUBLISHER_LICENSE_ALLOWMOD_LABEL=Autorisez-vous les modifications de votre travail\u00a0?
 #### CC_PUBLISHER_LICENSE_ALLOWMOD_SHAREALIKE=ShareAlike
-#? CC_PUBLISHER_LICENSE_ALLOWMOD_SHAREALIKE=
+CC_PUBLISHER_LICENSE_ALLOWMOD_SHAREALIKE=Partage à l'identique des conditions initiales\u00a0?
 #### CC_PUBLISHER_LICENSE_URL=Verification URL:
-#? CC_PUBLISHER_LICENSE_URL=
+CC_PUBLISHER_LICENSE_URL=URL de vérification\u00a0:
 #### CC_PUBLISHER_CC_VERIFICATION_URL_LABEL=What is this?
-#? CC_PUBLISHER_CC_VERIFICATION_URL_LABEL=
+CC_PUBLISHER_CC_VERIFICATION_URL_LABEL=Qu'est-ce que c'est\u00a0?
 #### CC_PUBLISHER_RDF_OUTPUT=In order to publish your file, please insert the following code in your verification page at:
-#? CC_PUBLISHER_RDF_OUTPUT=
-#### CC_PUBLISHER_COPY_BUTTON =Copy to Clipboard
-#? CC_PUBLISHER_COPY_BUTTON =
+CC_PUBLISHER_RDF_OUTPUT=Afin de publier votre fichier, veuillez insérer le code suivant dans votre page de vérification à\u00a0:
+#### CC_PUBLISHER_COPY_BUTTON=Copy to Clipboard
+CC_PUBLISHER_COPY_BUTTON=Copier vers le presse-papier
 #### CC_PUBLISHER_RDFNOTGENERATED_WARNING=You have to generate an up-to-date license RDF to create the verification link for you Creative Commons license.\n\nAre you sure you want to continue without generating the license?
-#? CC_PUBLISHER_RDFNOTGENERATED_WARNING=
+CC_PUBLISHER_RDFNOTGENERATED_WARNING=Vous devez générer une licence RDF à jour pour créer le lien de vérification pour votre licence Creative Commons.\n\nÊtes-vous sûr de vouloir continuer sans générer la licence\u00a0?
 #### CC_PUBLISHER_REMOVELICENSE_LABEL=Are you sure you want to permanently remove the license from your local copy of this file?
-#? CC_PUBLISHER_REMOVELICENSE_LABEL=
+CC_PUBLISHER_REMOVELICENSE_LABEL=Êtes-vous sûr de vouloir ôter de façon permanente le licence de votre copie locale de ce fichier\u00a0?
 #### CC_PUBLISHER_LICENSEREMOVED_LABEL=Please press OK to permanently remove license.
-#? CC_PUBLISHER_LICENSEREMOVED_LABEL=
+CC_PUBLISHER_LICENSEREMOVED_LABEL=Veuillez cliquer OK pour ôeter la licence de façon permanente.
 #### CC_RDFOUTPUT_TITLE=License RDF Output
-#? CC_RDFOUTPUT_TITLE=
+CC_RDFOUTPUT_TITLE=Licence RDF générée
 #### CC_RDF_FINISH_LABEL=Finish
-#? CC_RDF_FINISH_LABEL=
+CC_RDF_FINISH_LABEL=Terminer
 ################################################################################
 # Key/value pairs for the StandardListEditor reusable component
 ################################################################################
@@ -2372,19 +2369,19 @@ ERROR_SEARCH_TOO_LARGE=Votre recherche est trop longue. Veuillez la raccourcir e
 #### ERROR_XML_SEARCH_TOO_LARGE=Your search is too specific. Please make your search smaller and try again.
 ERROR_XML_SEARCH_TOO_LARGE=Votre recherche est trop spécifique. Veuillez supprimer ou raccourcir certains critères et réessayer.
 #### ERROR_CCPUBLISHER_MISSING_TITLE=Please enter the title of the file you want to publish.
-#? ERROR_CCPUBLISHER_MISSING_TITLE=
+ERROR_CCPUBLISHER_MISSING_TITLE=Veuillez saisir le titre du fichier que vous voulez publier.
 #### ERROR_CCPUBLISHER_MISSING_YEAR=Please enter the year of the file you want to publish.
-#? ERROR_CCPUBLISHER_MISSING_YEAR=
+ERROR_CCPUBLISHER_MISSING_YEAR=Veuillez saisir l'année du fichier que vous voulez publier.
 #### ERROR_CCPUBLISHER_MISSING_HOLDER=Please enter the copyright holder of the file you want to publish.
-#? ERROR_CCPUBLISHER_MISSING_HOLDER=
+ERROR_CCPUBLISHER_MISSING_HOLDER=Veuillez saisir le titulaire des droits du fichier que vous voulez publier.
 #### ERROR_CCPUBLISHER_MISSING_COMMERCIAL=Please enter the title of the file you want to publish.
-#? ERROR_CCPUBLISHER_MISSING_COMMERCIAL=
+ERROR_CCPUBLISHER_MISSING_COMMERCIAL=Veuillez saisir le titre du fichier que vous voulez publier.
 #### ERROR_CCPUBLISHER_MISSING_URL=Please enter a verification URL for the license.
-#? ERROR_CCPUBLISHER_MISSING_URL=
+ERROR_CCPUBLISHER_MISSING_URL=Veuillez saisir l'URL de vérification de la licence.
 #### ERROR_CCPUBLISHER_ERROR_URL=Please enter a valid verification URL for the license.
-#? ERROR_CCPUBLISHER_ERROR_URL=
+ERROR_CCPUBLISHER_ERROR_URL=Veuillez entrer une URL valide de vérification de la licence.
 #### ERROR_CCPUBLISHER_ERROR_DATE=Please enter a valid year for the file you want to publish.
-#? ERROR_CCPUBLISHER_ERROR_DATE=
+ERROR_CCPUBLISHER_ERROR_DATE=Veuillez entrer une année valide pour le fichier que vous voulez publier.
 ################################################################################
 # Messages for Licensing
 ################################################################################
