--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1084,15 +1084,20 @@ CC_PUBLISHER_LICENSE_PUBLIC=Public Domain
 CC_PUBLISHER_LICENSE_ALLOWCOM_LABEL=Allow commercial use of your work?
 CC_PUBLISHER_LICENSE_ALLOWMOD_LABEL=Allow modification of your work?
 CC_PUBLISHER_LICENSE_ALLOWMOD_SHAREALIKE=ShareAlike
-CC_PUBLISHER_LICENSE_URL=Verification URL:
+CC_PUBLISHER_LICENSE_VERIFICATION_URL=Where do you want to store the verification URL?
 CC_PUBLISHER_CC_VERIFICATION_URL_LABEL=What is this?
+CC_PUBLISHER_LICENSE_VERIFICATION_SELF=I want to host the verification file myself at the following URL:
+CC_PUBLISHER_LICENSE_VERIFICATION_ARCHIVE=I want to use the Internet Archive to host the file.
 CC_PUBLISHER_RDF_OUTPUT=In order to publish your file, please insert the following code in your verification page at:
 CC_PUBLISHER_COPY_BUTTON =Copy to Clipboard
 CC_PUBLISHER_RDFNOTGENERATED_WARNING=You have to generate an up-to-date license RDF to create the verification link for you Creative Commons license.\n\nAre you sure you want to continue without generating the license?
 CC_PUBLISHER_REMOVELICENSE_LABEL=Are you sure you want to permanently remove the license from your local copy of this file?
 CC_PUBLISHER_LICENSEREMOVED_LABEL=Please press OK to permanently remove license.
+CC_PUBLISHER_ARCHIVE_USERNAME_LABEL=Username:
+CC_PUBLISHER_ARCHIVE_PASSWORD_LABEL=Password:
 CC_RDFOUTPUT_TITLE=License RDF Output
 CC_RDF_FINISH_LABEL=Finish
+
 ################################################################################
 # Key/value pairs for the StandardListEditor reusable component
 ################################################################################
