Added Internet Archive uploading gui. Refactored MetaDataEditor.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1098,6 +1098,17 @@ CC_PUBLISHER_ARCHIVE_PASSWORD_LABEL=Password:
 CC_RDFOUTPUT_TITLE=License RDF Output
 CC_RDF_FINISH_LABEL=Finish
 
+INTERNETARCHIVE_UPLOADER_TITLE=Internet Archive Upload
+INTERNETARCHIVE_UPLOADER_INIT=Connecting to the Internet Archive...
+INTERNETARCHIVE_UPLOADER_CONNECTED=Connected...
+INTERNETARCHIVE_UPLOADER_DIR_CHANGED=Directory changed...
+INTERNETARCHIVE_UPLOADER_FILE_UPLOADING=Uploading...
+INTERNETARCHIVE_UPLOADER_FILE_UPLOADED=Uploaded 
+INTERNETARCHIVE_UPLOADER_FILE_BYTESOF=bytes of 
+INTERNETARCHIVE_UPLOADER_COMPLETED=Successfully uploaded files
+
+INTERNETARCHIVE_IDRETRIEVER_TITLE=Reserving Identifier...
+
 ################################################################################
 # Key/value pairs for the StandardListEditor reusable component
 ################################################################################
@@ -1362,8 +1373,15 @@ ERROR_CCPUBLISHER_MISSING_YEAR=Please enter the year of the file you want to pub
 ERROR_CCPUBLISHER_MISSING_HOLDER=Please enter the copyright holder of the file you want to publish.
 ERROR_CCPUBLISHER_MISSING_COMMERCIAL=Please enter the title of the file you want to publish.
 ERROR_CCPUBLISHER_MISSING_URL=Please enter a verification URL for the license.
-ERROR_CCPUBLISHER_ERROR_URL=Please enter a valid verification URL for the license.
-ERROR_CCPUBLISHER_ERROR_DATE=Please enter a valid year for the file you want to publish.
+ERROR_CCPUBLISHER_URL=Please enter a valid verification URL for the license.
+ERROR_CCPUBLISHER_DATE=Please enter a valid year for the file you want to publish.
+ERROR_CCPUBLISHER_IDENTIFIER_UNAVAILABLE=The default Internet Archive identifier for this file and username is allready taken. Please modify it below or press cancel to return.
+ERROR_CCPUBLISHER_MISSING_ARCHIVE_LOGIN=Please enter your Internet Archive username and password.
+ERROR_CCPUBLISHER_INTERNETARCHIVE_COMMUNICATION=There was an error communicating with the Internet Archive. Do you want to try again?
+ERROR_INTERNETARCHIVE_CONNECTION=There was an error while connecting to the internet archive.
+ERROR_INTERNETARCHIVE_LOGIN=There was an error while logging in to the Internet Archive. Please check your username and password and try again.
+ERROR_INTERNETARCHIVE_DIRECTORY=There was an error while trying to access the upload directory.
+ERROR_INTERNETARCHIVE_COMMUNICATION=There was an error communicating with the Internet Archive. Please try again later.
 ################################################################################
 # Messages for Licensing
 ################################################################################
