fixed UploadEvent sent files bug. Added a general progress bar to the InternetArchiveUploader.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1098,13 +1098,15 @@ CC_PUBLISHER_ARCHIVE_PASSWORD_LABEL=Password:
 CC_RDFOUTPUT_TITLE=License RDF Output
 CC_RDF_FINISH_LABEL=Finish
 
-INTERNETARCHIVE_UPLOADER_TITLE=Internet Archive Upload
+INTERNETARCHIVE_UPLOADER_TITLE=Upload
+INTERNETARCHIVE_UPLOADER_LABEL=Please wait while LimeWire is uploading your files to the Internet Archive
 INTERNETARCHIVE_UPLOADER_INIT=Connecting to the Internet Archive...
 INTERNETARCHIVE_UPLOADER_CONNECTED=Connected...
 INTERNETARCHIVE_UPLOADER_DIR_CHANGED=Directory changed...
-INTERNETARCHIVE_UPLOADER_FILE_UPLOADING=Uploading...
+INTERNETARCHIVE_UPLOADER_FILE_UPLOADING=Uploading file
+INTERNETARCHIVE_UPLOADER_FILE_UPLOADING_OF=of
 INTERNETARCHIVE_UPLOADER_FILE_UPLOADED=Uploaded 
-INTERNETARCHIVE_UPLOADER_FILE_BYTESOF=bytes of 
+INTERNETARCHIVE_UPLOADER_FILE_BYTESOF=bytes of
 INTERNETARCHIVE_UPLOADER_COMPLETED=Successfully uploaded files
 
 INTERNETARCHIVE_IDRETRIEVER_TITLE=Reserving Identifier...
