Added listener methods for final upload checkin

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1108,7 +1108,7 @@ INTERNETARCHIVE_UPLOADER_FILE_UPLOADING_OF=of
 INTERNETARCHIVE_UPLOADER_FILE_UPLOADED=Uploaded 
 INTERNETARCHIVE_UPLOADER_FILE_BYTESOF=bytes of
 INTERNETARCHIVE_UPLOADER_COMPLETED=Successfully uploaded files
-
+INTERNETARCHIVE_UPLOADER_CHECKIN=Checking in...
 INTERNETARCHIVE_IDRETRIEVER_TITLE=Reserving Identifier...
 
 ################################################################################
