Moving spam-filter-branch up.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -465,12 +465,15 @@ RESULT_PANEL_COUNT=#
 RESULT_PANEL_VENDOR=Vendor
 RESULT_PANEL_ADDED=Created
 RESULT_PANEL_LICENSE=License
+RESULT_PANEL_SPAM=Spam Rating
 
 #Filter labels
 SEARCH_FILTER_ALL=All
 SEARCH_FILTER_OPTION=Option
 SEARCH_FILTER_OPTIONS=Options
 SEARCH_FILTER_MEDIA=Media
+SEARCH_FILTER_SPAM=Spam Control
+SEARCH_FILTER_SPAM_TOOLTIP=Adjust the sensitivity of LimeWire's spam filter
 
 DOWNLOAD_LAUNCH_BUTTON_LABEL=Preview
 DOWNLOAD_LAUNCH_BUTTON_TIP=Preview Selected Downloads
@@ -1917,6 +1920,16 @@ OPTIONS_PROXY_LOGIN_LABEL=Configure username and password to be used for the pro
 OPTIONS_PROXY_LOGIN_AUTHENTICATE_LABEL=Enable Authentication (Does Not Work for HTTP Proxies):
 OPTIONS_PROXY_LOGIN_USERNAME_LABEL=Username:
 OPTIONS_PROXY_LOGIN_PASSWORD_LABEL=Password:
+
+################################################################################
+# Key/value pairs for the spam filter options window item
+# in the options window
+################################################################################
+OPTIONS_SPAM_FILTER_TITLE=Spam Filter
+OPTIONS_SPAM_FILTER_LABEL=You can disable LimeWire's spam filter and delete all previously collected filter data here, if your spam filter is rating too many files as spam.
+OPTIONS_SPAM_FILTER_BOX_LABEL=Enable Spam Filter
+OPTIONS_SPAM_FILTER_BUTTON_LABEL=Forget Training Data
+OPTIONS_SPAM_FILTER_BUTTON_TEXT=Clear
 
 ################################################################################
 # Key/value pairs for top-level stats panels
