An extended version of Kyle Furlong's Console patch. Thanks Kyle!

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -68,6 +68,7 @@ GENERAL_BROWSE_BUTTON_LABEL=Browse...
 GENERAL_BROWSE_HOST_LABEL=Browse Host
 GENERAL_BROWSE_HOST_TIP=View All Files on the Selected Computer
 GENERAL_ADVANCED_SUB_MENU=Advanced
+GENERAL_CLEAR_BUTTON_LABEL=Clear
 
 ################################################################################
 # Key/value pairs for right-click context menus.
@@ -189,6 +190,7 @@ OPTIONS_TITLE=Options
 STATS_TITLE=Statistics
 DOWNLOAD_TITLE=Downloads
 UPLOAD_TITLE=Uploads
+CONSOLE_TITLE=Console
 
 ################################################################################
 # Key/value pairs for the tooltips of the main windows
@@ -197,6 +199,7 @@ SEARCH_TIP=Search and Download Files
 MONITOR_TIP=View Searches and Uploads
 CONNECTIONS_TIP=Show Connections to Other Clients
 LIBRARY_TIP=View Repository of Saved Files
+CONSOLE_TIP=View Log Messages
 
 ################################################################################
 # Key/Value pairs for the pull-down menus in the main window
@@ -250,6 +253,10 @@ MENU_NAV_CONN_ACCESSIBLE=Display the Connections Screen
 MENU_NAV_LIB=Library
 MENU_NAV_LIB_MNEMONIC=L
 MENU_NAV_LIB_ACCESSIBLE=Display the Library Screen
+MENU_NAV_CONSOLE=Console
+MENU_NAV_CONSOLE_MNEMONIC=O
+MENU_NAV_CONSOLE_ACCESSIBLE=Display the Console Screen
+
 
 MENU_VIEW_TITLE=View
 MENU_VIEW_TITLE_MNEMONIC=V
@@ -271,6 +278,9 @@ MENU_VIEW_CONNECTIONS_ACCESSIBLE=Show Connections Window
 MENU_VIEW_LIBRARY=Library
 MENU_VIEW_LIBRARY_MNEMONIC=L
 MENU_VIEW_LIBRARY_ACCESSIBLE=Show Library Window
+MENU_VIEW_CONSOLE=Console
+MENU_VIEW_CONSOLE_MNEMONIC=O
+MENU_VIEW_CONSOLE_ACCESSIBLE=Show Console Window
 MENU_VIEW_THEMES_TITLE=Apply Skins
 MENU_VIEW_THEMES_TITLE_MNEMONIC=A
 MENU_VIEW_THEMES_GET_MORE=Get More Skins
@@ -761,6 +771,11 @@ MONITOR_VIEW_INCOMING_SEARCHES=Show Incoming Searches
 MONITOR_VIEW_SHOW_LAST=Show Last
 MONITOR_VIEW_SEARCHES=Searches
 MONITOR_VIEW_LEAF_MESSAGE=Your client is a leaf node shielded by an Ultrapeer. Hence you will see few or no searches in the monitor window.
+
+###################################################################
+# Key/value pairs for ConsoleView
+###################################################################
+CONSOLE_REFRESH_LOGGERS_LABEL=Refresh Loggers
 
 ################################################################################
 # Key/value pairs for gui download speed constants -- used in the
