Added description length check

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1375,6 +1375,7 @@ ERROR_CCPUBLISHER_MISSING_YEAR=Please enter the year of the file you want to pub
 ERROR_CCPUBLISHER_MISSING_HOLDER=Please enter the copyright holder of the file you want to publish.
 ERROR_CCPUBLISHER_MISSING_COMMERCIAL=Please enter the title of the file you want to publish.
 ERROR_CCPUBLISHER_MISSING_URL=Please enter a verification URL for the license.
+ERROR_CCPUBLISHER_DESCRIPTION_START=The description for this file is too short. Please enter at least {0} words.
 ERROR_CCPUBLISHER_URL=Please enter a valid verification URL for the license.
 ERROR_CCPUBLISHER_DATE=Please enter a valid year for the file you want to publish.
 ERROR_CCPUBLISHER_IDENTIFIER_UNAVAILABLE=The default Internet Archive identifier for this file and username is allready taken. Please modify it below or press cancel to return.
