Adds a check box to show/hide spam results (i.e. turn off the spam filter) and adds a nice button to mark and unmark as spam

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -378,6 +378,10 @@ SEARCH_SEARCH_BUTTON_LABEL=Search
 SEARCH_SEARCH_BUTTON_TIP=Search the Network for the Given Words
 SEARCH_STOP_BUTTON_LABEL=Stop Search
 SEARCH_STOP_BUTTON_TIP=Stop Collecting Search Results for Selected Tab
+SEARCH_SPAM_BUTTON_LABEL=Spam
+SEARCH_NOT_SPAM_BUTTON_LABEL=Not Spam
+SEARCH_SPAM_BUTTON_TIP=Mark selected search results as Spam
+SEARCH_NOT_SPAM_BUTTON_TIP=Mark selected search results as Not Spam
 SEARCH_PUBLIC_KILL_STRING=Close Search
 SEARCH_PUBLIC_LAUNCH_STRING=Launch Action
 SEARCH_PUBLIC_STOP_STRING=Stop Search
@@ -472,7 +476,8 @@ SEARCH_FILTER_ALL=All
 SEARCH_FILTER_OPTION=Option
 SEARCH_FILTER_OPTIONS=Options
 SEARCH_FILTER_MEDIA=Media
-SEARCH_FILTER_SPAM=Spam Control
+SEARCH_FILTER_SPAM=Filter Spam
+SEARCH_FILTER_HIDE_SPAM=Hide Spam
 SEARCH_FILTER_SPAM_TOOLTIP=Adjust the sensitivity of LimeWire's spam filter
 
 DOWNLOAD_LAUNCH_BUTTON_LABEL=Preview
