initial commit for DHT Output tab and DHT Console

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -189,6 +189,7 @@ OPTIONS_TITLE=Options
 STATS_TITLE=Statistics
 DOWNLOAD_TITLE=Downloads
 UPLOAD_TITLE=Uploads
+DHT_TITLE=Azureus DHT
 
 ################################################################################
 # Key/value pairs for the tooltips of the main windows
@@ -197,6 +198,7 @@ SEARCH_TIP=Search and Download Files
 MONITOR_TIP=View Searches and Uploads
 CONNECTIONS_TIP=Show Connections to Other Clients
 LIBRARY_TIP=View Repository of Saved Files
+DHT_TIP=View DHT
 
 ################################################################################
 # Key/Value pairs for the pull-down menus in the main window
@@ -250,6 +252,9 @@ MENU_NAV_CONN_ACCESSIBLE=Display the Connections Screen
 MENU_NAV_LIB=Library
 MENU_NAV_LIB_MNEMONIC=L
 MENU_NAV_LIB_ACCESSIBLE=Display the Library Screen
+MENU_NAV_DHT=DHT
+MENU_NAV_DHT_MNEMONIC=D
+MENU_NAV_DHT_ACCESSIBLE=Display the DHT Screen
 
 MENU_VIEW_TITLE=View
 MENU_VIEW_TITLE_MNEMONIC=V
@@ -271,6 +276,9 @@ MENU_VIEW_CONNECTIONS_ACCESSIBLE=Show Connections Window
 MENU_VIEW_LIBRARY=Library
 MENU_VIEW_LIBRARY_MNEMONIC=L
 MENU_VIEW_LIBRARY_ACCESSIBLE=Show Library Window
+MENU_VIEW_DHT=DHT
+MENU_VIEW_DHT_MNEMONIC=D
+MENU_VIEW_DHT_ACCESSIBLE=Show DHT Window
 MENU_VIEW_THEMES_TITLE=Apply Skins
 MENU_VIEW_THEMES_TITLE_MNEMONIC=A
 MENU_VIEW_THEMES_GET_MORE=Get More Skins
