Some spam filter fixes and UI improvements

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -476,8 +476,10 @@ SEARCH_FILTER_ALL=All
 SEARCH_FILTER_OPTION=Option
 SEARCH_FILTER_OPTIONS=Options
 SEARCH_FILTER_MEDIA=Media
-SEARCH_FILTER_SPAM=Filter Spam
+SEARCH_FILTER_SPAM_LAX=Lax
+SEARCH_FILTER_SPAM_STRICT=Strict
 SEARCH_FILTER_HIDE_SPAM=Hide Spam
+SEARCH_FILTER_HIDE_SPAM_TOOLTIP=Hide or show Spam search results
 SEARCH_FILTER_SPAM_TOOLTIP=Adjust the sensitivity of LimeWire's spam filter
 
 DOWNLOAD_LAUNCH_BUTTON_LABEL=Preview
