The s/Spam/Junk filter settings are in the LimeWire options now (Menu Prefs/Settings -> Searching -> Junk)  and there's a new sorting mode for junk results (move 'em to the bottom).

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -388,10 +388,11 @@ SEARCH_SEARCH_BUTTON_LABEL=Search
 SEARCH_SEARCH_BUTTON_TIP=Search the Network for the Given Words
 SEARCH_STOP_BUTTON_LABEL=Stop Search
 SEARCH_STOP_BUTTON_TIP=Stop Collecting Search Results for Selected Tab
-SEARCH_SPAM_BUTTON_LABEL=Spam
-SEARCH_NOT_SPAM_BUTTON_LABEL=Not Spam
-SEARCH_SPAM_BUTTON_TIP=Mark selected search results as Spam
-SEARCH_NOT_SPAM_BUTTON_TIP=Mark selected search results as Not Spam
+SEARCH_SPAM_MARK_AS_LABEL=Mark As
+SEARCH_SPAM_BUTTON_LABEL=Junk
+SEARCH_NOT_SPAM_BUTTON_LABEL=Not Junk
+SEARCH_SPAM_BUTTON_TIP=Mark selected search results as Junk
+SEARCH_NOT_SPAM_BUTTON_TIP=Mark selected search results as Not Junk
 SEARCH_PUBLIC_KILL_STRING=Close Search
 SEARCH_PUBLIC_LAUNCH_STRING=Launch Action
 SEARCH_PUBLIC_STOP_STRING=Stop Search
@@ -479,18 +480,13 @@ RESULT_PANEL_COUNT=#
 RESULT_PANEL_VENDOR=Vendor
 RESULT_PANEL_ADDED=Created
 RESULT_PANEL_LICENSE=License
-RESULT_PANEL_SPAM=Spam Rating
+RESULT_PANEL_SPAM=Junk Rating
 
 #Filter labels
 SEARCH_FILTER_ALL=All
 SEARCH_FILTER_OPTION=Option
 SEARCH_FILTER_OPTIONS=Options
 SEARCH_FILTER_MEDIA=Media
-SEARCH_FILTER_SPAM_LAX=Lax
-SEARCH_FILTER_SPAM_STRICT=Strict
-SEARCH_FILTER_HIDE_SPAM=Hide Spam
-SEARCH_FILTER_HIDE_SPAM_TOOLTIP=Hide or show Spam search results
-SEARCH_FILTER_SPAM_TOOLTIP=Adjust the sensitivity of LimeWire's spam filter
 
 DOWNLOAD_LAUNCH_BUTTON_LABEL=Preview
 DOWNLOAD_LAUNCH_BUTTON_TIP=Preview Selected Downloads
@@ -1483,6 +1479,7 @@ OPTIONS_SEARCH_MAIN_TITLE=Searching
 OPTIONS_SEARCH_LIMIT_MAIN_TITLE=Basic
 OPTIONS_SEARCH_QUALITY_MAIN_TITLE=Quality
 OPTIONS_SEARCH_SPEED_MAIN_TITLE=Speed
+OPTIONS_SEARCH_JUNK_MAIN_TITLE=Junk
 OPTIONS_FILTERS_MAIN_TITLE=Filters
 OPTIONS_RESULTS_MAIN_TITLE=Keywords
 OPTIONS_MESSAGES_MAIN_TITLE=Hosts
@@ -1965,14 +1962,20 @@ OPTIONS_PROXY_LOGIN_USERNAME_LABEL=Username:
 OPTIONS_PROXY_LOGIN_PASSWORD_LABEL=Password:
 
 ################################################################################
-# Key/value pairs for the spam filter options window item
+# Key/value pairs for the junk filter options window item
 # in the options window
 ################################################################################
-OPTIONS_SPAM_FILTER_TITLE=Spam Filter
-OPTIONS_SPAM_FILTER_LABEL=You can disable LimeWire's spam filter and delete all previously collected filter data here, if your spam filter is rating too many files as spam.
-OPTIONS_SPAM_FILTER_BOX_LABEL=Enable Spam Filter
-OPTIONS_SPAM_FILTER_BUTTON_LABEL=Forget Training Data
-OPTIONS_SPAM_FILTER_BUTTON_TEXT=Clear
+OPTIONS_SEARCH_JUNK_TITLE=Junk
+OPTIONS_SEARCH_JUNK_LABEL=You can disable LimeWire's junk filter and delete all previously collected filter data here, if your junk filter is rating too many files as spam.
+OPTIONS_SEARCH_JUNK_DISPLAY_IN_PLACE=Display junk in place
+OPTIONS_SEARCH_JUNK_MOVE_TO_BOTTOM=Display junk at the bottom of search results
+OPTIONS_SEARCH_JUNK_HIDE_SPAM=Do not display junk
+OPTIONS_SEARCH_JUNK_DISPLAY=Display:
+OPTIONS_SEARCH_JUNK_THRESHOLD=Junk threshold:
+OPTIONS_SEARCH_JUNK_THRESHOLD_LAX=0%
+OPTIONS_SEARCH_JUNK_THRESHOLD_STRICT=100%
+OPTIONS_SEARCH_JUNK_THRESHOLD_TOOLTIP=Adjust the sensitivity of LimeWire's junk filter
+OPTIONS_SEARCH_JUNK_RESET_LABEL=Forget Training Data
 
 ################################################################################
 # Key/value pairs for top-level stats panels
