Initial test of torrent downloads with AZ core.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -211,6 +211,9 @@ MENU_FILE_CLOSE_MNEMONIC=C
 MENU_FILE_CLOSE_ACCESSIBLE=Close the Program
 MENU_FILE_QUIT=Quit
 MENU_FILE_QUIT_MNEMONIC=Q
+MENU_FILE_OPEN=Open...
+MENU_FILE_OPEN_MNEMONIC=N
+MENU_FILE_OPEN_ACCESSIBLE=Open a torrent file
 MENU_FILE_CONNECT=Connect
 MENU_FILE_CONNECT_MNEMONIC=O
 MENU_FILE_CONNECT_ACCESSIBLE=Connect to the Network
@@ -705,6 +708,7 @@ DOWNLOAD_STATUS_HASHING=Verifying File Contents...
 DOWNLOAD_STATUS_SAVING=Saving File...
 DOWNLOAD_STATUS_PAUSING=Pausing...
 DOWNLOAD_STATUS_PAUSED=Paused
+DOWNLOAD_STATUS_SEEDING=Seeding torrent
 DOWNLOAD_AWAITING_SOURCES=A more specific search may be required...
 # {0} the name of the skin
 # {1} the localized name of the menu item "Refresh Skins"
@@ -1211,6 +1215,7 @@ SPLASH_STATUS_COMPONENT_LOADING_PINGER=Loading Peer Listener...
 SPLASH_STATUS_COMPONENT_LOADING_CONNECTION_WATCHDOG=Loading Stale Connection Manager...
 SPLASH_STATUS_COMPONENT_LOADING_SAVED_FILE_MANAGER=Loading Saved Files...
 SPLASH_STATUS_COMPONENT_LOADING_SIMPP_MANAGER=Loading Secure Settings...
+SPLASH_STATUS_COMPONENT_LOADING_AZUREUS=Loading Azureus Torrent Engine...
 
 ##################################################################
 # Key/value pairs for the shutdown window
@@ -2024,6 +2029,12 @@ STATS_TOTAL_UPSTREAM_BANDWIDTH_TITLE=Upstream
 STATS_TOTAL_UPSTREAM_BANDWIDTH_LABEL=Total bandwidth used to send outgoing data, either through uploads or Gnutella messages.
 STATS_TOTAL_DOWNSTREAM_BANDWIDTH_TITLE=Downstream
 STATS_TOTAL_DOWNSTREAM_BANDWIDTH_LABEL=Total bandwidth used to receive incoming data, either through downloads or Gnutella messages.
+
+################################################################################
+# Key/value pairs for torrent related stuff
+################################################################################
+TORRENT_INPUT_DIALOG=Please enter the URL of the torrent you want to download:
+TORRENT_INVALID_URL=Invalid torrent URL
 
 ################################################################################
 ################################################################################
