Adding ability to save the console output and the stack traces of all active threads (Java 1.5 and later)

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -865,6 +865,12 @@ LIBRARY_TREE_INDIVIDUALLY_SHARED_FILES_DIRECTORY=Individually Shared Files
 LIBRARY_TREE_INDIVIDUALLY_SHARED_FILES_DIRECTORY_TOOLTIP=List of All Individually Shared Files
 
 ################################################################################
+# Key/value pairs for strings in the console window
+################################################################################
+CONSOLE_SAVE_BUTTON_LABEL=Save
+CONSOLE_DIALOG_SAVE_TITLE=Save As
+
+################################################################################
 # Key/value pairs for burn cd link
 ################################################################################
 LIBRARY_BURN_LABEL=Burn CD...
