added torrent file open.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -211,9 +211,12 @@ MENU_FILE_CLOSE_MNEMONIC=C
 MENU_FILE_CLOSE_ACCESSIBLE=Close the Program
 MENU_FILE_QUIT=Quit
 MENU_FILE_QUIT_MNEMONIC=Q
-MENU_FILE_OPEN=Open...
-MENU_FILE_OPEN_MNEMONIC=N
-MENU_FILE_OPEN_ACCESSIBLE=Open a torrent file
+MENU_FILE_OPEN_URL=Open torrent url...
+MENU_FILE_OPEN_URL_MNEMONIC=N
+MENU_FILE_OPEN_URL_ACCESSIBLE=Open a torrent url
+MENU_FILE_OPEN_TORRENT=Open torrent file...
+MENU_FILE_OPEN_TORRENT_MNEMONIC=T
+MENU_FILE_OPEN_TORRENT_ACCESSIBLE=Open a torrent file
 MENU_FILE_CONNECT=Connect
 MENU_FILE_CONNECT_MNEMONIC=O
 MENU_FILE_CONNECT_ACCESSIBLE=Connect to the Network
