--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -705,6 +705,8 @@ DOWNLOAD_STATUS_HASHING=Verifying File Contents...
 DOWNLOAD_STATUS_SAVING=Saving File...
 DOWNLOAD_STATUS_PAUSING=Pausing...
 DOWNLOAD_STATUS_PAUSED=Paused
+DOWNLOAD_STATUS_VALIDATING=Validating...
+DOWNLOAD_STATUS_INVALID=Invalid
 DOWNLOAD_AWAITING_SOURCES=A more specific search may be required...
 # {0} the name of the skin
 # {1} the localized name of the menu item "Refresh Skins"
